# breakpad

./: README.md
mendeley/: CMakeLists.txt  README.txt  alternate-debug-file-names.json  extract-stacktrace.py  fetch-symbols.py  minidump_stackwalk_processor.py
mendeley/patches/: 0001-Fix-build-of-updated-breakpad-under-VS-2008.patch  0002-Re-apply-our-breakpad-patch-which-terminates-the-pro.patch
mendeley/test/: CMakeLists.txt  buggy_app.cc  stacktrace_test.py
src/client/linux/minidump_writer/: linux_dumper.h  minidump_writer.cc
src/client/mac/crash_generation/: crash_generation_server.cc
src/client/mac/handler/: dynamic_images.cc  minidump_generator.h
src/client/windows/handler/: exception_handler.cc  exception_handler.h
src/common/linux/: eintr_wrapper.h
src/common/mac/: macho_walker.cc
src/processor/: external_symbol_supplier.cc  external_symbol_supplier.h  minidump_stackwalk.cc  scoped_ptr.h  tokenize.cc
src/tools/windows/dump_syms/: dump_syms.vcxproj
